[package]
name = "input_query"
version = "0.3.0"
edition = "2024"
description = "A library for querying key states without a window."
license = "MIT"
repository = "https://github.com/Murat65536/input-query"

[dependencies]
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = { version = "0.3", features = ["CGEventSource", "CGRemoteOperation"]}
